--- a/styleCSS/_layout/_footer.scss
+++ b/styleCSS/_layout/_footer.scss
@@ -27,3 +27,11 @@ footer{
         width:100vw
     }
 }
+/*----------------------------------------------------------------
+---------------------media:1600------------------------------------
+----------------------------------------------------------------*/
+@include rwd-min-width(1600){
+    footer{
+        font-size: 2rem;
+    }
+}
